--- a/index.html
+++ b/index.html
@@ -11,75 +11,99 @@
 <body>
     <header>
         <nav>
-            <a href="#">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Potfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="Studio">Studio</a></li>
+                <li><a href="Portfolio">Potfolio</a></li>
+                <li><a href="Contacts">Contacts</a></li>
             </ul>
         </nav>
-        <a href="email:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <a href="email:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
     </header>
     <main>
         <section>
             <h1>
-                Effective Solutions <br>for Your Business
+                Effective Solutions for Your Business
             </h1>
             <button type="button">Order Service</button>
         </section>
+        <section>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>
+                        Our goal is to identify the business<br>
+                        problem to walk away with the<br>
+                        perfect and creative solution.
+                    </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>
+                        Bring the key message to the<br>
+                        brand's audience for the best price<br>
+                        within the shortest possible time.
+                    </p>
+                </li>
+                <li>
+                    <h3>Diligense</h3>
+                    <p>
+                        Research and confirm brands that<br>
+                        present thr strongest digital growth<br>
+                        opportunities and minimize risk.
+                    </p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>
+                        Design practice focused on digital<br>
+                        experiences. We bring forth a deep<br>
+                        passion for problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>What Are We Doing</h2>
+            <ul>
+                <img src="./images/screen.jpg" alt="computer-screen" width="360">
+                <img src="./images/mobile-site.jpg" alt="open-mobile-site" width="360">
+                <img src="./images/mobile.jpg" alt="cellphone" width="360">
+            </ul>
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/tom.jpg" alt="Tom Ford" width="264">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
-    <section>
-        <h3>Strategy</h3>
-        <p>
-            Our goal is to identify the business<br>
-            problem to walk away with the<br>
-            perfect and creative solution.
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-            Bring the key message to the<br>
-            brand's audience for the best price<br>
-            within the shortest possible time.
-        </p>
-        <h3>Diligense</h3>
-        <p>
-            Research and confirm brands that<br>
-            present thr strongest digital growth<br>
-            opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-            Design practice focused on digital<br>
-            experiences. We bring forth a deep<br>
-            passion for problem-solving.
-        </p>
-    </section>
-    <section>
-        <h2>What Are We Doing</h2>
-        <img src="./images/screen.jpg" alt="computer screen">
-        <img src="./images/mobile-site.jpg" alt="open mobile site">
-        <img src="./images/mobile.jpg" alt="cellphone">
-    </section>
-    <section>
-        <h2>Our Team</h2>
-        <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-        <img src="./images/tom.jpg" alt="Tom Ford" width="264">
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-        <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-        <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
-    </section>
     <footer>
-        <img src="./images/logo.svg" alt="logo">
-        <p>Increase the flow of customers and <br>
-            sales for your business with digital<br>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and
+            sales for your business with digital
             marketing & growth solutions.
         </p>
     </footer>
