update index html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <address>
             <a href="email:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+11(000)1111111">+11 (000) 111-11-11></a>
         </address>
     </header>
     <main>
@@ -34,35 +34,23 @@
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p>
-                        Our goal is to identify the business<br>
-                        problem to walk away with the<br>
-                        perfect and creative solution.
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
                     <h3>Punctuality</h3>
-                    <p>
-                        Bring the key message to the<br>
-                        brand's audience for the best price<br>
-                        within the shortest possible time.
-                    </p>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
                 </li>
                 <li>
                     <h3>Diligense</h3>
-                    <p>
-                        Research and confirm brands that<br>
-                        present thr strongest digital growth<br>
-                        opportunities and minimize risk.
-                    </p>
+                    <p>Research and confirm brands that present thr strongest digital growth opportunities and minimize
+                        risk.</p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>
-                        Design practice focused on digital<br>
-                        experiences. We bring forth a deep<br>
-                        passion for problem-solving.
-                    </p>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -76,22 +64,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
+                    <img src="./images/mark.jpg" alt="a dark hair man" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/tom.jpg" alt="Tom Ford" width="264">
+                    <img src="./images/tom.jpg" alt="a blond hair man" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
+                    <img src="./images/camila.jpg" alt="a woman" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
+                    <img src="./images/daniel.jpg" alt="a man with a beard" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
