update index html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </ul>
         </nav>
         <address>
-            <a href="email:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)1111111">+11 (000) 111-11-11></a>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
         </address>
     </header>
     <main>
@@ -31,6 +31,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
+            <h2></h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -43,8 +44,8 @@
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligense</h3>
-                    <p>Research and confirm brands that present thr strongest digital growth opportunities and minimize
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
