--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </ul>
         </nav>
         <address>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+11(000)1111111">+11(000)111-11-11</a>
         </address>
     </header>
     <main>
@@ -31,11 +31,12 @@
             <button type="button">Order Service</button>
         </section>
         <section>
-            <h2></h2>
+            <h2> </h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.
                     </p>
                 </li>
                 <li>
@@ -45,7 +46,8 @@
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and
+                        minimize
                         risk.</p>
                 </li>
                 <li>
@@ -57,9 +59,17 @@
         </section>
         <section>
             <h2>What Are We Doing</h2>
-            <img src="./images/screen.jpg" alt="computer-screen" width="360">
-            <img src="./images/mobile-site.jpg" alt="open-mobile-site" width="360">
-            <img src="./images/mobile.jpg" alt="cellphone" width="360">
+            <ul>
+                <li>
+                    <img src="./images/screen.jpg" alt="computer-screen" width="360">
+                </li>
+                <li>
+                    <img src="./images/mobile-site.jpg" alt="open-mobile-site" width="360">
+                </li>
+                <li>
+                    <img src="./images/mobile.jpg" alt="cellphone" width="360">
+                </li>
+            </ul>
         </section>
         <section>
             <h2>Our Team</h2>
