--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="Studio">Studio</a></li>
-                <li><a href="Portfolio">Potfolio</a></li>
-                <li><a href="Contacts">Contacts</a></li>
+                <li>
+                    <a href="Studio">Studio</a>
+                </li>
+                <li>
+                    <a href="Portfolio">Potfolio</a>
+                </li>
+                <li>
+                    <a href="Contacts">Contacts</a>
+                </li>
             </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)1111111">+11(000)111-11-11</a>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+11(000)1111111">+11(000)111-11-11</a>
+                </li>
+            </ul>
         </address>
     </header>
     <main>
@@ -31,7 +43,6 @@
             <button type="button">Order Service</button>
         </section>
         <section>
-            <h2> </h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
