--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </ul>
         </section>
         <section>
-            <h2>What Are We Doing</h2>
+            <h2>What are we doing</h2>
             <ul>
                 <li>
                     <img src="./images/screen.jpg" alt="computer-screen" width="360">
