update index html

--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
-                    <a href="#"></a>
                     <a href="Studio">Studio</a>
                 </li>
                 <li>
-                    <a href="#"></a>
-                    <a href="Portfolio">Potfolio</a>
+                    <a href="Portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#"></a>
                     <a href="Contacts">Contacts</a>
                 </li>
             </ul>
@@ -33,7 +30,7 @@
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111"> +11(000)111-11-11</a>
+                    <a href="+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -46,6 +43,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
+            <h2>Business</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
