--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
+                    <a href="Studio"></a>
                     <a href="Studio">Studio</a>
                 </li>
                 <li>
+                    <a href="Portfolio"></a>
                     <a href="Portfolio">Portfolio</a>
                 </li>
                 <li>
+                    <a href="Contacts"></a>
                     <a href="Contacts">Contacts</a>
                 </li>
             </ul>
