--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li>
-                    <a href="Studio"></a>
-                    <a href="Studio">Studio</a>
+                <li><a href="Studio">Studio</a>
                 </li>
-                <li>
-                    <a href="Portfolio"></a>
-                    <a href="Portfolio">Portfolio</a>
+                <li><a href="Portfolio">Portfolio</a>
                 </li>
-                <li>
-                    <a href="Contacts"></a>
-                    <a href="Contacts">Contacts</a>
+                <li><a href="Contacts">Contacts</a>
                 </li>
             </ul>
         </nav>
