--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="./index.html">Studio</a>
-                </li>
-                <li><a href="./index.html">Portfolio</a>
-                </li>
-                <li><a href="./index.html">Contacts</a>
-                </li>
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./index.html">Portfolio</a></li>
+                <li><a href="./index.html">Contacts</a></li>
+
             </ul>
         </nav>
         <address>
@@ -27,7 +25,8 @@
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11(000)111-11-11</a>
+                    <a href="tel: +11(000)111-11-11">+11 (000) 111-11-11</a>
+
                 </li>
             </ul>
         </address>
