--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./index.html">Portfolio</a></li>
-                <li><a href="./index.html">Contacts</a></li>
+                <li>
+                    <a href="./index.html"></a>
+                    <a href="./index.html">Studio</a>
+                </li>
+                <li>
+                    <a href="./index.html"></a>
+                    <a href="./index.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="./index.html"></a>
+                    <a href="./index.html">Contacts</a>
+                </li>
 
             </ul>
         </nav>
@@ -25,7 +34,7 @@
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel: +11(000)111-11-11">+11 (000) 111-11-11</a>
+                    <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
 
                 </li>
             </ul>
