--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
-                    <a href="./index.html"></a>
                     <a href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a href="./index.html"></a>
                     <a href="./index.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="./index.html"></a>
                     <a href="./index.html">Contacts</a>
                 </li>
 
@@ -34,7 +31,7 @@
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
 
                 </li>
             </ul>
